# SMILES-2026-WebPilot

./: .env.example  .gitignore  README.md  pyproject.toml
examples/blank_react_app/: index.html  package.json
examples/blank_react_app/src/: App.css  App.jsx
examples/buggy_component_counter/: index.html
examples/buggy_component_counter/src/: App.jsx
examples/buggy_component_counter/src/components/: CounterControls.jsx
examples/buggy_counter/: package-lock.json  package.json
examples/buggy_counter/src/: App.css  App.jsx  main.jsx
examples/buggy_input_echo/: index.html
examples/buggy_input_echo/src/: App.css  App.jsx  main.jsx
scripts/: smoke_llm_client.py
tasks/: sample_component_counter_repair.json  sample_diagnostic_repair.json  sample_input_echo_repair.json  sample_text_generation.json  sample_text_generation_counter.json
webpilot/: browser.py  cli.py  evaluator.py  llm_client.py  project_context.py  project_edit.py  repairer.py  runner.py  schemas.py  tester.py
webpilot/agents/: __init__.py  generator.py  planner.py  reflector.py  repairer.py  test_planner.py
