[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smiles-webpilot"
version = "0.1.0"
description = "Browser-grounded web coding agent MVP for SMILES 2026"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "playwright>=1.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["webpilot*"]
exclude = ["outputs*", "tasks*", "examples*", "docs*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"